--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.13.12",
     "@types/supertest": "^6.0.2",
-    "eslint": "^8.57.1",
+    "eslint": "^9.23.0",
+    "eslint-config": "^0.3.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.6.0",
     "globals": "^16.0.0",
     "nodemon": "^3.1.9",
+    "prettier": "3.5.3",
     "supertest": "^7.1.0",
     "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
