--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "jest --coverage",
     "dev": "nodemon dist/index.js",
     "build": "npx tsc",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prettier": "prettier --write .",
+    "prettier-check": "prettier --check ."
   },
   "keywords": [],
   "author": "",
