--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "build": "npx tsc",
     "lint": "eslint .",
     "prettier": "prettier --write .",
-    "prettier-check": "prettier --check ."
+    "prettier-check": "prettier --check .",
+    "docs": "npx ts-node src/swagger.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/swagger-ui-express": "^4.1.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.1.0",
     "jest": "^29.7.0",
     "mongoose": "^8.13.0",
+    "swagger-autogen": "^2.23.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -32,6 +37,7 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^22.13.12",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
     "eslint": "^9.23.0",
     "eslint-config": "^0.3.0",
     "eslint-config-standard": "^17.1.0",
@@ -46,5 +52,14 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.28.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@scarf/scarf",
+      "@tree-sitter-grammars/tree-sitter-yaml",
+      "core-js-pure",
+      "tree-sitter",
+      "tree-sitter-json"
+    ]
   }
 }
